# exp-image-cluster-wains

./: README.md  WainVNumeral.gnumeric  agreers.sh  anomalies.sh  average-gzoo-images.sh  average-mnist-images.sh  classification.sh  config.sh  creatur-iomha.cabal  exp-image-cluster-wains.cabal  init-daemon.sh  iomha.config  iomha.config.default  notes  sqAnalysis.sh  trendSummary.gnuplot
src/ALife/Creatur/Wain/Iomha/: Action.hs  Daemon.hs  ExamineAgent.hs  Experiment.hs  FMRI.hs  FMRIMain.hs  GeneratePopulation.hs  Image.hs  ImageDB.hs  ImageThinker.hs  ImageTweaker.hs  OneWain.hs  Photo.hs  Ratchet.hs  Stats.hs  Universe.hs  Wain.hs
test/: Main.hs  SOMTest.hs
test/ALife/Creatur/Wain/Iomha/: ActionQC.hs  ExperimentQC.hs  ImageQC.hs  TestUtils.hs  WainQC.hs
