name:                creatur-wains-iomha
version:             2.6
synopsis:            Agent for categorising images.
description:         ALife agent that works co-operatively with other
                     agents to develop a classification scheme for
                     images. This package replaces the creatur-realtra
                     package.
homepage:            https://github.com/mhwombat/creatur-wains-iomha
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
copyright:           (c) Amy de Buitléir 2013-2014
category:            Data
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/mhwombat/creatur-wains-iomha.git

source-repository this
  type:     git
  location: https://github.com/mhwombat/creatur-wains-iomha.git
  tag:      2.6

executable iomha-daemon
  main-is:          ALife/Creatur/Wain/Iomha/Daemon.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  build-depends:
                    app-settings ==0.2.*,
                    array ==0.5.*,
                    base ==4.*,
                    cereal ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.6.9,
                    creatur-wains ==3.9.0,
                    directory ==1.2.*,
                    factory ==0.2.*,
                    filepath ==1.3.*,
                    grid ==7.6.*,
                    hdaemonize ==0.5.*,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    text ==1.2.*,
                    time ==1.4.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    vector ==0.10.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable iomha-init
  main-is:          ALife/Creatur/Wain/Iomha/GeneratePopulation.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  build-depends:
                    app-settings ==0.2.*,
                    array ==0.5.*,
                    base ==4.*,
                    cereal ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.6.9,
                    creatur-wains ==3.9.0,
                    directory ==1.2.*,
                    filepath ==1.3.*,
                    grid ==7.6.*,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    vector ==0.10.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable iomha-examine
  main-is:          ALife/Creatur/Wain/Iomha/ExamineAgent.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings ==0.2.*,
                    array ==0.5.*,
                    base ==4.*,
                    cereal ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.6.9,
                    creatur-wains ==3.9.0,
                    directory ==1.2.*,
                    filepath ==1.3.*,
                    grid ==7.* && >7.1,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    vector ==0.10.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable iomha-fmri
  main-is:          ALife/Creatur/Wain/Iomha/FMRI.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings ==0.2.*,
                    array ==0.5.*,
                    base ==4.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    creatur ==5.6.9,
                    creatur-wains ==3.9.0,
                    diagrams-lib ==1.2.*,
                    diagrams-cairo ==1.2.*,
                    directory ==1.2.*,
                    factory ==0.2.*,
                    filepath ==1.3.*,
                    grid ==7.* && >7.1,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    vector ==0.10.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

executable iomha-photo
  main-is:          ALife/Creatur/Wain/Iomha/Photo.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings ==0.2.*,
                    array ==0.5.*,
                    base ==4.*,
                    cereal ==0.4.*,
                    colour ==2.3.*,
                    creatur ==5.6.9,
                    creatur-wains ==3.9.0,
                    diagrams-lib ==1.2.*,
                    diagrams-cairo ==1.2.*,
                    directory ==1.2.*,
                    factory ==0.2.*,
                    filepath ==1.3.*,
                    grid ==7.* && >7.1,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.4.*,
                    unix ==2.7.*,
                    vector ==0.10.*,
                    zlib ==0.5.*
  hs-source-dirs:   src

Test-suite iomha-tests
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  GHC-Options:      -Wall -fno-warn-orphans
  Hs-source-dirs:   test, src
  build-depends:
                    array ==0.5.*,
                    base ==4.*,
                    bytestring ==0.10.*,
                    cereal ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.6.9,
                    creatur-wains ==3.9.0,
                    directory ==1.2.*,
                    filepath ==1.3.*,
                    grid ==7.6.*,
                    JuicyPixels ==3.1.*,
                    lens ==4.4.*,
                    MonadRandom ==0.3.*,
                    mtl ==2.2.*,
                    random ==1.1.*,
                    som ==7.*,
                    split ==0.2.*,
                    test-framework ==0.8.*,
                    test-framework-hunit ==0.3.*,
                    test-framework-quickcheck2 ==0.3.*,
                    transformers ==0.4.*,
                    vector ==0.10.*,
                    QuickCheck ==2.7.*
  Other-modules:    ALife.Creatur.Wain.Iomha.Universe
                    ALife.Creatur.Wain.Iomha.ImageQC
